tests/expectations/compiler/const_generics/const_generic_shadows_param_fail.out
Error [EAST0372013]: the const generic parameter `N` is being shadowed.
    --> compiler-test:6:26
     |
   6 |     inline foo::[N: u32](N: u32) -> u32 {
     |                  ^ previous definition of the const generic parameter `N` here
   6 |     inline foo::[N: u32](N: u32) -> u32 {
     |                          ^ `N` redefined here
     |
     = names must be unique within their scope
